--- a/racion-service.yml
+++ b/racion-service.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/pascual?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Madrid
+    url: jdbc:mysql://localhost:3306/pascual_microservice?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Madrid
     username: ottegu
     password: egu1236
     initSQL: "SET NAMES 'utf8mb4'; SET LC_TIME_NAMES= 'es_ES';"
